--- a/web/angular-wallet/src/app/main/dashboard/widgets/balance/balance.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/balance/balance.component.scss
@@ -8,8 +8,20 @@
     align-items: center;
   }
   .chart {
-    height: 100px;
-    width: 100px;
+    position: relative;
+    height: 120px;
+    width: 120px;
+  }
+
+  .total {
+    position: absolute;
+    font-size: 14px;
+    font-weight: bold;
+    color: #0d47a1;
+    top: 52px;
+    left: -4px;
+    width: 100%;
+    text-align: center;
   }
 
   .dot {
@@ -22,8 +34,12 @@
     background-color: #00FF88;
   }
 
-  .locked {
+  .committed {
     background-color: #0099ff;
+  }
+
+  .reserved {
+    background-color: #9E9E9E;
   }
 
   .line {
