--- a/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.html
@@ -32,6 +32,7 @@
         <div class="font-weight-600">{{getPriceSats()}} SATS</div>
         <div>{{getPriceUsd()}}</div>
         <div>{{getPriceEur()}}</div>
+        <div>{{getPriceRub()}}</div>
       </div>
 
       <hr class="line" />
@@ -41,6 +42,7 @@
         <div>{{get24hVolumeBtc()}}</div>
         <div>{{get24hVolumeUsd()}}</div>
         <div>{{get24hVolumeEur()}}</div>
+        <div>{{get24hVolumeRub()}}</div>
       </div>
 
       <hr class="line" />
@@ -50,6 +52,7 @@
         <div>{{getMarketCapBtc()}}</div>
         <div>{{getMarketCapUsd()}}</div>
         <div>{{getMarketCapEur()}}</div>
+        <div>{{getMarketCapRub()}}</div>
       </div>
     </div>
   </div>
