--- a/web/angular-wallet/src/app/main/dashboard/widgets/token/token.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/token/token.component.scss
@@ -25,11 +25,10 @@
     text-align: center;
   }
 
-  .token-link {
+  .button-link-container {
     position: absolute;
-    font-size: 10px;
     right: 0;
-    bottom: -16px;
+    bottom: -8px;
   }
 
   .token-balance {
