chore: pimped the balance chart layout

--- a/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
@@ -7,7 +7,7 @@
       [colspan]="layoutParameters.columnSpans.chart"
       [rowspan]="layoutParameters.rowSpans.chart">
       <app-balance-chart
-        class="widget"
+        class="widget custom-widget"
         [account]="account"
         [priceBtc]="priceBtc"
         [priceUsd]="priceUsd"
