--- a/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.scss
@@ -1,11 +1,5 @@
-
-  //.widget {
-  //  padding: 16px;
-  //  width: 100%;
-  //  height: 100%;
-  //  background: white;
-  //  border-radius: 4px;
-  //  color: rgba(0, 0, 0, 0.87);
-  //  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-  //}
-  //
+:host {
+  .custom-widget {
+      padding: 0 !important;
+  }
+}
