--- a/web/angular-wallet/src/app/main/dashboard/simple-dashboard/simple-dashboard.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/simple-dashboard/simple-dashboard.component.scss
@@ -1,6 +1,14 @@
 @import "src/@fuse/scss/fuse";
+:host {
+  .custom-widget {
+    padding: 0 !important;
+  }
+}
 
 #dashboard {
+
+
+
   .fuse-card {
     max-width: none !important;
     min-width: 0 !important;
