--- a/web/angular-wallet/src/app/main/dashboard/widgets/blockforged/blockforged.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/blockforged/blockforged.component.html
@@ -1,1 +1,40 @@
-<p>blockforged works!</p>
+<div class="grey-700-fg fullwidth">
+  <div fxFlex fxLayout="row">
+    <div fxFlex="30"
+         fxLayout="column"
+         fxLayoutAlign="center center"
+    >
+      <div class="font-size-32 text-center font-weight-600">{{blockInfo.count}}</div>
+      <small class="font-size-10 text-center">{{'forged_blocks' | i18n}}</small>
+    </div>
+    <div fxFlex="70" fxLayout="column" fxFlexAlign="center">
+      <span>
+        <small>{{'reward_income' | i18n}}</small>
+        <mat-icon class="font-size-12 grey-500-fg ml-4" matTooltip="{{ 'reward_income_info' | i18n }}">info</mat-icon>
+      </span>
+      <div fxFlex fxLayout="row" fxLayoutAlign="space-between center" class="font-size-12">
+        <div class="font-size-14 font-weight-600">
+          {{blockInfo.minedIncomeSigna | amount:'signa':true}}
+        </div>
+        <div>
+          {{getPriceBtc()}}
+        </div>
+        <div>
+          {{getPriceUsd()}}
+        </div>
+        <div>
+          {{getPriceEur()}}
+        </div>
+        <div>
+          {{getPriceRub()}}
+        </div>
+      </div>
+      <hr class="widget-hline" />
+      <small>{{'last_forged_block' | i18n}}</small>
+      <div class="font-size-14">
+        <a [routerLink]="['/blocks/block', blockInfo.lastBlock.block]" >{{blockInfo.lastBlock.height}}</a>
+        &nbsp;{{getLastBlockDate() | date: 'MMM d, y, h:mm:ss':null:locale}}
+      </div>
+    </div>
+  </div>
+</div>
