wip: added pool info widget

--- a/web/angular-wallet/src/app/main/dashboard/miner-dashboard/miner-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/miner-dashboard/miner-dashboard.component.html
@@ -51,10 +51,10 @@
     </mat-grid-tile>
 
     <mat-grid-tile
-      [colspan]="layoutParameters.columnSpans.minedIncomePlanck"
-      [rowspan]="layoutParameters.rowSpans.minedIncomePlanck"
+      [colspan]="layoutParameters.columnSpans.pool"
+      [rowspan]="layoutParameters.rowSpans.pool"
     >
-      <app-minedincome class="widget"></app-minedincome>
+      <app-miningpool class="widget"></app-miningpool>
     </mat-grid-tile>
 
     <mat-grid-tile
