--- a/web/angular-wallet/src/app/main/dashboard/widgets/blockinfo/blockinfo.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/blockinfo/blockinfo.component.html
@@ -1,4 +1,4 @@
-<div class="grey-700-fg fullwidth">
+<div class="grey-700-fg fullwidth position-relative">
   <div fxFlex fxLayout="column" fxFlexAlign="center center">
     <small>{{'block_height' | i18n}}</small>
     <ngx-skeleton-loader
@@ -15,5 +15,8 @@
       class="font-size-14 font-weight-600">
       {{getNetworkCapacity() | number}} PiB + {{miningInfo.averageCommitmentNQT | amount:'planck': true }} per TiB
     </div>
+  </div>
+  <div class="button-link-container">
+    <app-link-button [routerLink]="'/commitment'">{{ 'add_commitment' | i18n }}</app-link-button>
   </div>
 </div>
