--- a/web/angular-wallet/src/app/main/dashboard/widgets/blockinfo/blockinfo.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/blockinfo/blockinfo.component.scss
@@ -3,4 +3,10 @@
     border-top: 1px solid #E0E0E0;
     width: 100%;
   }
+
+  .button-link-container {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
 }
