feat: miner dashboard complete

--- a/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
@@ -1,4 +1,7 @@
-<div *ngIf="layoutParameters && account" class="p-16">
+<div *ngIf="layoutParameters && account"
+     ngClass.gt-sm="p-16"
+     [ngStyle.xs]="{'padding':'0 !important'}"
+>
   <mat-grid-list [cols]="layoutParameters.columnCount"
                  rowHeight="32px"
                  gutterSize="16px"
