--- a/web/angular-wallet/src/app/main/dashboard/trader-dashboard/trader-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/trader-dashboard/trader-dashboard.component.html
@@ -1,1 +1,5 @@
-<p>trader-dashboard works!</p>
+<div ngClass.gt-sm="p-16"
+     [ngStyle.xs]="{'padding':'0 !important'}"
+>
+  <p>trader-dashboard works!</p>
+</div>
