--- a/web/angular-wallet/src/app/main/dashboard/widgets/blockinfo/blockinfo.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/blockinfo/blockinfo.component.html
@@ -1,4 +1,4 @@
-<div class="grey-700-fg fullwidth position-relative">
+<div class="grey-700-fg fullwidth fullheight position-relative">
   <div fxFlex fxLayout="column" fxFlexAlign="center center">
     <small>{{'block_height' | i18n}}</small>
     <ngx-skeleton-loader
