--- a/web/angular-wallet/src/app/main/dashboard/miner-dashboard/miner-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/miner-dashboard/miner-dashboard.component.html
@@ -1,4 +1,7 @@
-<div *ngIf="layoutParameters && account" class="p-16">
+<div *ngIf="layoutParameters && account"
+     ngClass.gt-sm="p-16"
+     [ngStyle.xs]="{'padding':'0 !important'}"
+>
   <mat-grid-list [cols]="layoutParameters.columnCount"
                  rowHeight="32px"
                  gutterSize="16px"
@@ -54,7 +57,7 @@
       [colspan]="layoutParameters.columnSpans.pool"
       [rowspan]="layoutParameters.rowSpans.pool"
     >
-      <app-miningpool class="widget"></app-miningpool>
+      <app-miningpool class="widget" [account]="account" ></app-miningpool>
     </mat-grid-tile>
 
     <mat-grid-tile
