--- a/web/angular-wallet/src/app/main/dashboard/widgets/balance-chart/balance-chart.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/balance-chart/balance-chart.component.html
@@ -2,7 +2,7 @@
   <div class="main-widget" *ngIf="chart">
     <div class="fuse-navy-500-fg">
       <small *ngIf="account.transactions.length" class="grey-500-fg font-size-10 since-text">{{"recent_transactions_since" | i18n}}&nbsp;{{firstDate}}</small>
-      <div class="balance-info">
+      <div class="balance-info mt-16">
         <h1 class="pr-8 mb-0">{{accountBalances.totalBalance.getSigna() | amount}}</h1>
         <div class="inline">
           <small class="font-size-12 pr-8">{{calculateValue(priceBtc) | currency:'฿'}}</small>
